--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ django-redis==4.12.1
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
 mysqlclient==2.0.1
-djorm-ext-pool==0.8.2
+djorm-ext-pool==0.8.2#https://juejin.im/post/6844904139109957645
